# ai-chat

./: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
src/: layout.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/conversations/: 11bf5b37-e0b8-42e0-8dcf-dc8c4aefc000.json
src-tauri/src/: chat_module.rs  logger_module.rs  main.rs  module.rs  repl_module.rs  settings.rs  tool_use.rs
src-tauri/src/aws/models/: credentials.rs
src-tauri/src/aws/queries/: exec_async.rs  export_credentials.rs  get_caller_identity.rs  is_authenticated.rs  list_profiles.rs  login.rs  mod.rs  set_default_credentials.rs
src-tauri/src/event_bus/: event.rs  event_bus.rs  event_kind.rs  mod.rs  origin.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/llm/models/: bedrock_converse_error.rs  chat_response_payload.rs  conversation.rs  conversation_role.rs  conversation_summary.rs  has_output_text.rs  message.rs  mod.rs
src-tauri/src/llm/queries/: generate_title.rs  get_builder.rs  get_client.rs  get_conversation_path.rs  get_inference_config.rs  mod.rs  submit_prompt.rs
src-tauri/src/system/queries/: ensure_path.rs  get_files_by_extension.rs  get_timestamp.rs  mod.rs
src/app/: chat.tsx  page.tsx  profiles.tsx
src/components/: AppNavbar.tsx  Markdown.tsx  Mermaid.tsx  Sidebar.tsx
src/context/: ConversationContext.ts
src/models/: chat-response.ts  conversation-dto.ts  conversation-role.ts  conversation-summary-dto.ts  conversation-summary.ts  conversation.ts  message-dto.ts  message.ts  role-dto.ts
src/queries/: index.ts
(+5 files in other folders)
