[package]
name = "ai-chat"
version = "0.0.0"
description = "A desktop LLM chat buddy."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.82"
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
async-process = "2.2.3"
chrono = { version = "0.4.38", features = ["serde"] }
webbrowser = "1.0.1"
aws-config = "1.5.4"
aws-sdk-bedrockruntime = "1.40.0"
aws-smithy-runtime-api = "1.7.1"
aws-smithy-types = "1.2.0"
reqwest = "0.12.5"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
home = "0.5.9"
rust-ini = "0.21.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
